# cyhdev_back

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh
.cargo/: config.toml
src/: main.rs
src/controllers/: macros.rs  router.rs
src/controllers/auth/: signup.rs  verify_email.rs
src/controllers/middleware/: request_response_info.rs
src/models/: common_traits.rs  consts.rs  jwt.rs  user_tokens.rs  users.rs
src/utils/errors/: errors.rs
src/utils/gadgets/: argon.rs  regex.rs  stopwatch.rs
src/utils/serde/: serialize_to_response.rs
src/utils/server_init/: initialize_server.rs  server_state_def.rs
src/utils/server_init/server_init_funcs/: https_redirector.rs  initialize_crypto.rs  initialize_db_conn_pool.rs  initialize_logger.rs  initialize_mailer.rs  load_cert_config.rs  load_env_vars.rs
