[package]
name = "cyhdev_com_back"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "unwind"

[dependencies]
# web framework
axum = { version = "0.7.9", default-features = false, features = [
    "form",
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "tracing",
    "macros",
    # "ws",
    # "multipart",
] } #is the web framework
axum-server = { version = "0.7.1", features = ["tls-rustls"] }

# http(s) and middleware
tower-http = { version = "0.6.2", features = [
    "trace",
    "compression-gzip",
    "cors",
] }


# async
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "time"] }

# error handling
anyhow = "1.0.93"

# time
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"

# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# env variabes loading
dotenvy = "0.15.7"
regex = "1.11.1"

# crypto
rustls = "0.23.18"

# db
deadpool-postgres = "0.14.0"
tokio-postgres = { version = "0.7.12", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-chrono-0_4",
] }

# request
reqwest = { version = "0.12.9", default-features = false, features = [
    "http2",
    "charset",
    "macos-system-configuration",
    "json",
    "rustls-tls",
    "multipart",
] } #sends requests

# email
lettre = { version = "0.11.10", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "pool",
    "tokio1-rustls-tls",
    "tokio1",
] }
